--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "components/backbone": "1.1.x",
     "components/bootstrap": "3.3.x",
     "components/underscore": "1.7.x",
-    "justso/justapi": "dev-master"
+    "justso/justapi": "1.x"
   },
   "require-dev": {
     "phpunit/phpunit": "4.x"
