--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,19 @@
     {
       "name": "Joachim Schirrmacher",
       "email": "j.schirrmacher@justso.de",
-      "homepage": "http://digital-wachsen.de",
+      "homepage": "https://digital-innovation-lab.de",
       "role": "Developer"
     }
   ],
   "require": {
-    "php": ">=5.4.0",
+    "php": ">=5.6.0",
     "components/jquery": "1.11.x",
     "components/backbone": "1.1.x",
     "components/bootstrap": "3.3.x",
     "components/underscore": "1.7.x",
-    "justso/justapi": "1.x"
+    "justso/justapi": "2.x"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.x"
+    "phpunit/phpunit": ">=5.4"
   }
 }
