--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "components/backbone": "1.1.x",
     "components/bootstrap": "3.3.x",
     "components/underscore": "1.7.x",
-    "justso/justapi": "2.x"
+    "justso/justapi": "2.0.0 - 3"
   },
   "require-dev": {
     "phpunit/phpunit": ">=5.4"
